disable spring security

--- a/basketqube/src/main/resources/messages.properties
+++ b/basketqube/src/main/resources/messages.properties
@@ -1,2 +1,2 @@
 matchLoader.nothingToLoad = ::::::::::No matches to load::::::::::
-matchLoader.matchesLoaded = ::::::::::Total loaded for {} - {} matches::::::::::
+matchLoader.matchesLoaded = ::::::::::Last loaded for round for {} - {}::::::::::
